@@ -343,10 +343,10 @@ class AppStore extends ObjStore
                 $app->icmp6sub = $icmp6cur->textContent;
             }
 
-            $cursor = DH::findFirstElement('port', $cursor);
-            if( $cursor !== FALSE )
+            $portcur = DH::findFirstElement('port', $cursor);
+            if( $portcur !== FALSE )
             {
-                foreach( $cursor->childNodes as $portx )
+                foreach( $portcur->childNodes as $portx )
                 {
                     if( $portx->nodeType != XML_ELEMENT_NODE )
                         continue;
@@ -429,6 +429,144 @@ class AppStore extends ObjStore
                     elseif( $ex[0] == 'icmp6' )
                     {
                         $app->icmp6 = $ex[1];
+                    }
+                    else
+                        derr('unsupported port description: ' . $portx->textContent);
+                }
+            }
+
+            $ext_portcur = DH::findFirstElement('extended-port', $cursor);
+            if( $ext_portcur !== FALSE )
+            {
+                foreach( $ext_portcur->childNodes as $portx )
+                {
+                    $port_secure = false;
+
+                    if( $portx->nodeType != XML_ELEMENT_NODE )
+                        continue;
+
+                    /** @var  $portx DOMElement */
+
+                    $ex = explode('/', $portx->textContent);
+
+                    if( count($ex) == 3 )
+                    {
+                        $port_secure = true;
+                        unset( $ex[2] );
+                    }
+                    else
+                    {
+                        //not interested in the same ports as under <ports>
+                        continue;
+                    }
+
+                    if( count($ex) != 2 )
+                        derr('unsupported port description: ' . $portx->textContent);
+
+                    if( $ex[0] == 'tcp' )
+                    {
+                        $exports = explode(',', $ex[1]);
+                        $ports = Array();
+
+                        if( count($exports) < 1 )
+                            derr('unsupported port description: ' . $portx->textContent);
+
+                        foreach( $exports as &$sport )
+                        {
+                            if( $sport == 'dynamic' )
+                            {
+                                $ports[] = Array(0 => 'dynamic');
+                                continue;
+                            }
+                            $tmpex = explode('-', $sport);
+                            if( count($tmpex) < 2 )
+                            {
+                                $ports[] = Array(0 => 'single', 1 => $sport);
+                                continue;
+                            }
+
+                            $ports[] = Array(0 => 'range', 1 => $tmpex[0], 2 => $tmpex[1]);
+
+                        }
+                        //print_r($ports);
+                        if( !$port_secure )
+                        {
+                            if( $app->tcp === null )
+                                $app->tcp = $ports;
+                            else
+                                $app->tcp = array_merge($app->tcp, $ports);
+                        }
+                        else
+                        {
+                            if( $app->tcp_secure === null )
+                                $app->tcp_secure = $ports;
+                            else
+                                $app->tcp_secure = array_merge($app->tcp_secure, $ports);
+                        }
+
+                    }
+                    elseif( $ex[0] == 'udp' )
+                    {
+                        $exports = explode(',', $ex[1]);
+                        $ports = Array();
+
+                        if( count($exports) < 1 )
+                            derr('unsupported port description: ' . $portx->textContent);
+
+                        foreach( $exports as &$sport )
+                        {
+                            if( $sport == 'dynamic' )
+                            {
+                                $ports[] = Array(0 => 'dynamic');
+                                continue;
+                            }
+                            $tmpex = explode('-', $sport);
+                            if( count($tmpex) < 2 )
+                            {
+                                $ports[] = Array(0 => 'single', 1 => $sport);
+                                continue;
+                            }
+
+                            $ports[] = Array(0 => 'range', 1 => $tmpex[0], 2 => $tmpex[1]);
+
+                        }
+                        //print_r($ports);
+                        if( !$port_secure )
+                        {
+                            if( $app->udp === null )
+                                $app->udp = $ports;
+                            else
+                                $app->udp = array_merge($app->udp, $ports);
+                        }
+                        else{
+                            if( $app->udp_secure === null )
+                                $app->udp_secure = $ports;
+                            else
+                                $app->udp_secure = array_merge($app->udp_secure, $ports);
+                        }
+
+                    }
+                    elseif( $ex[0] == 'icmp' )
+                    {
+                        if( !$port_secure )
+                        {
+                            $app->icmp = $ex[1];
+                        }
+                        else
+                        {
+                            $app->icmp_secure = $ex[1];
+                        }
+                    }
+                    elseif( $ex[0] == 'icmp6' )
+                    {
+                        if( !$port_secure )
+                        {
+                            $app->icmp6 = $ex[1];
+                        }
+                        else
+                        {
+                            $app->icmp6_secure = $ex[1];
+                        }
                     }
                     else
                         derr('unsupported port description: ' . $portx->textContent);
