@@ -16,6 +16,7 @@ CHANGELOG
 * class-Zone - extend with type: tap, layer2, tunnel
 * update predefined.xml to 8070-5032
 * class-Address - introduce address object of type ip-wildcard
+* class-AppStore/App - introduce App secure ports
 
 utils:
 address-edit: improvement for actions=decommisssion - extend interface (ethernet/vlan/loopback/tunnel) with add/removeIPv4address
